Changed header styling, table view layout

--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -2944,7 +2944,7 @@ body {
 	display: block;
 	width: 40px;
 	height: 3px;
-	background-color: #f2ba21;
+	background-color: #540000;
 	margin-top: 5px;
 }
 .brand-link .brand-image {
