Changed patient check-in interface, vitals layout, menu layout

--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20316,6 +20316,8 @@ td[data-name=pwd] {
 
 .btn.ew-detail {
   background-color: #08819a;
+  color: #fff;
+  font-weight: 700;
 }
 
 .ew-table-header .ew-table-header-btn .ew-table-header-caption {
