--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3005,6 +3005,8 @@ body {
  }
  .btn.ew-detail {
  	background-color: #08819a;
+ 	color: #fff;
+ 	font-weight: 700;
  }
  .ew-table-header .ew-table-header-btn .ew-table-header-caption {
     color: #fff;
