Adjusted appointment calendar to feature all day variable

--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20580,4 +20580,10 @@ td button, .btn-primary {
   border-radius: 50%;
 }
 
+.el_users_photo img {
+  border-radius: 50%;
+  object-fit: cover;
+  max-width: 70px;
+}
+
 /*END_USER_STYLES*/
