Comprehansive layout and functionality changes on lab request module

--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3219,5 +3219,10 @@ td button, .btn-primary  {
 	object-fit: cover;
 	max-width: 70px;
 }
+.ew-detail-add-group {
+	background-color: #08819a;
+    color: #fff;
+    font-weight: 700;
+}
 
 /*END_USER_STYLES*/
