--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20601,4 +20601,28 @@ td button, .btn-primary {
   display: none;
 }
 
+.check-in-view .card {
+  background-color: #cdcdcd;
+  color: #540000;
+  padding: 1rem;
+}
+
+.check-in-view .card p {
+  font-weight: 700;
+}
+
+.check-in-view .card p span {
+  font-weight: 400;
+  display: block;
+  color: #000;
+}
+
+.check-in-view .card p span:before {
+  display: block;
+  width: 100%;
+  height: 1px;
+  backgground-color: rgba(0, 0, 0, 0.4);
+  margin-bottom: 0.5rem;
+}
+
 /*END_USER_STYLES*/
