--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -2894,14 +2894,13 @@ div[id^=dsl_] .ew-loading {
 }
 .counters .record-count {
 	position: relative;
-    left: 60px;
-    font-size: 2rem;
+    left: 10px;
+    font-size: 1.5rem;
     font-weight: 900;
     margin-bottom: 5px;
 }
 .counters i {
-	font-size: 1.6rem;
-	rotate: -25deg;
+	font-size: 1.4rem;
     opacity: .6;
 }
 .counters .card-text {
@@ -3254,6 +3253,10 @@ td button, .btn-primary  {
 }
 [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled) {
 	background-color: #08819a;
+}
+.counters .card-header {
+	font-size: .9rem;
+	font-weight: 600;
 }
 
 /*END_USER_STYLES*/
