Changed lab test request interface

--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3258,5 +3258,8 @@ td button, .btn-primary  {
 	font-size: .9rem;
 	font-weight: 600;
 }
+.ew-select {
+	min-width: 100% !important;
+}
 
 /*END_USER_STYLES*/
