--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3258,5 +3258,10 @@ td button, .btn-primary  {
 	font-size: .9rem;
 	font-weight: 600;
 }
+.el_patient_visits_patient_id a {
+	font-size: .83rem;
+    font-weight: 600;
+    color: #540000;
+}
 
 /*END_USER_STYLES*/
