--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3223,28 +3223,20 @@ td button, .btn-primary  {
     color: #fff;
     font-weight: 700;
 }
-
-/* detail tables */
-.dropdown-item.ew-detail-view {
-	display: none;
-}
-.dropdown-toggle.ew-detail.ew-dropdown-toggle {
-	display: none;
-}
-.check-in-view .card {
+.gridder-view .card {
 	background-color: #cdcdcd;
 	color: #540000;
 	padding: 1rem;
 }
-.check-in-view .card p {
+.gridder-view .card p {
 	font-weight: 700;
 }
-.check-in-view .card p span{
+.gridder-view .card p span{
 	font-weight: 400;
 	display: block;
 	color: #000;
 }
-.check-in-view .card p span:before{
+.gridder-view .card p span:before{
 	display: block;
 	width: 100%;
 	height: 1px;
