--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3255,5 +3255,8 @@ td button, .btn-primary  {
     font-weight: 600;
     color: #540000;
 }
+#fpatient_visitsview .ew-add {
+	display: none !important;
+}
 
 /*END_USER_STYLES*/
