--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3261,19 +3261,26 @@ table td a{
     font-weight: 600;
     color: #540000;
 }
-#fpatient_visitsview .ew-add {
+
+/* #fpatient_visitsview .ew-add {
 	display: none !important;
+} */
+#fpatient_visitsview .ew-toolbar {
+	display: none;
 }
 #fpatients_lab_reportview .ew-detail-pages {
 	width: 100%;
 }
 .patient-visits .ew-detail-option .ew-list-options,
-#fpatient_visitssrch .ew-btn-group.ew-list-options {
+#fpatient_visitssrch .ew-btn-group.ew-list-options  {
 	display: none !important;
 }
 td[data-name="detail_patient_appointments"],
 td[data-name="detail_patient_visits"],
 td[data-name="detail_patients_dependants"]{
+	display: none;
+}
+.content .btn-toolbar, .content .ew-detail-option {
 	display: none;
 }
 
