--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3280,7 +3280,7 @@ td[data-name="detail_patient_visits"],
 td[data-name="detail_patients_dependants"]{
 	display: none;
 }
-.content .btn-toolbar, .content .ew-detail-option {
+.content .ew-detail-option {
 	display: none;
 }
 
