--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3282,5 +3282,12 @@ td[data-name="detail_patients_dependants"]{
 .content .ew-detail-option {
 	display: none;
 }
+.tbl-invoices p {
+	font-weight: 700;
+}
+.tbl-invoices span {
+	font-weight: 400;
+	display: blockquote;
+}
 
 /*END_USER_STYLES*/
