Stled the search form

--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3289,5 +3289,8 @@ td[data-name="detail_patients_dependants"]{
 	font-weight: 400;
 	display: blockquote;
 }
+input[type="search"] {
+	background-color: #cdcdcd;
+}
 
 /*END_USER_STYLES*/
