--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20673,4 +20673,8 @@ td[data-name=detail_patients_dependants] {
   display: blockquote;
 }
 
+input[type=search] {
+  background-color: #cdcdcd;
+}
+
 /*END_USER_STYLES*/
