Fixed various report layouts/bugs

--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3283,10 +3283,10 @@ td[data-name="detail_patients_dependants"]{
 .content .ew-detail-option {
 	display: none;
 }
-.tbl-invoices p {
+.tbl-group p {
 	font-weight: 700;
 }
-.tbl-invoices span {
+.tbl-group span {
 	font-weight: 400;
 	display: blockquote;
 }
