--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20663,11 +20663,11 @@ td[data-name=detail_patients_dependants] {
   display: none;
 }
 
-.tbl-invoices p {
+.tbl-group p {
   font-weight: 700;
 }
 
-.tbl-invoices span {
+.tbl-group span {
   font-weight: 400;
   display: blockquote;
 }
