--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20689,4 +20689,8 @@ input[type=search] {
   color: black;
 }
 
+#gmp_radiology_billing_report .ew-btn-dropdown {
+  display: none;
+}
+
 /*END_USER_STYLES*/
