--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3305,5 +3305,8 @@ input[type="search"] {
 .ew-view.dropdown-item .icon-view::before {
     color: black;
 }
+#gmp_radiology_billing_report .ew-btn-dropdown {
+	display: none;
+}
 
 /*END_USER_STYLES*/
