--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -2917,6 +2917,9 @@ div[id^=dsl_] .ew-loading {
 body, .chart-content .card-header h4 {
 	font-family: "Montserrat", sans-serif;
 }
+h1,h2,h3,h4,h5,h6 {
+	font-family: "Montserrat", sans-serif !important;
+}
 .chart-content .card-header h4 {
 	font-weight: 700;
 }
@@ -3285,6 +3288,7 @@ td[data-name="detail_patients_dependants"]{
 }
 .tbl-group p {
 	font-weight: 700;
+	margin: 0;
 }
 .tbl-group span {
 	font-weight: 400;
