--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20698,4 +20698,8 @@ input[type=search] {
   display: none;
 }
 
+.ew-extended-search .ew-filter-field {
+  display: none !important;
+}
+
 /*END_USER_STYLES*/
