--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3312,5 +3312,8 @@ input[type="search"] {
 #gmp_radiology_billing_report .ew-btn-dropdown {
 	display: none;
 }
+.ew-extended-search .ew-filter-field {
+	display: none !important;
+}
 
 /*END_USER_STYLES*/
