--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20234,7 +20234,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .content-header .h1 {
-  font-size: 1.6rem;
+  font-size: 1.6rem !important;
 }
 
 .content-header h2, .content-header h3 {
