Completes work on patient discharge sheet

--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20702,4 +20702,13 @@ input[type=search] {
   display: none !important;
 }
 
+#fdischarge_summary_reportview .ew-add,
+#fdischarge_summary_reportview .dropdown-toggle {
+  display: none;
+}
+
+span span p {
+  font-weight: 400 !important;
+}
+
 /*END_USER_STYLES*/
