--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3330,5 +3330,8 @@ span span p {
 	font-size: 2.5rem;
 	font-weight: 700;
 }
+#gmp_ipd_billing_report .dropdown-toggle {
+	display: none;
+}
 
 /*END_USER_STYLES*/
