--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3333,5 +3333,8 @@ span span p {
 #gmp_ipd_billing_report .dropdown-toggle {
 	display: none;
 }
+.medicine-ipd-dispensation .ew-list-options .ew-add {
+	display: none;
+}
 
 /*END_USER_STYLES*/
