--- a/css/afyaplus.scss
+++ b/css/afyaplus.scss
@@ -3326,7 +3326,8 @@ span span p {
 .ew-aggregate {
 	font-weight: 700;
 }
-.el_ipd_total_bill_total_bill span {
+.el_ipd_total_bill_total_bill span,
+.el_opd_bill_total_total_bll span {
 	font-size: 2.5rem;
 	font-weight: 700;
 }
