Styed user panel info details/opd list grid

--- a/css/afyaplus.css
+++ b/css/afyaplus.css
@@ -20722,12 +20722,17 @@ span span p {
   font-weight: 700;
 }
 
-#gmp_ipd_billing_report .dropdown-toggle {
+#gmp_ipd_billing_report .dropdown-toggle,
+#gmp_opd_bill_master_report .dropdown-toggle {
   display: none;
 }
 
 .medicine-ipd-dispensation .ew-list-options .ew-add {
   display: none;
+}
+
+.user-panel a span {
+  display: block;
 }
 
 /*END_USER_STYLES*/
